--- a/index.html
+++ b/index.html
@@ -2,24 +2,47 @@
 
 <head>
 <title>Pintrest</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-    body {text-align: center;}
+    body {text-align: center; font-family:}
 #card {margin: 100px auto;
         position: relative;
         background-image: url(river.jpg);
     background-size: contain;
         display: inline-block;
-        height: 1280px;
-    width: 800px;
+        height: 920px;
+    width: 575px;
     margin-top: 200px;
-    border-radius: 50px;}
+    border-radius: 50px;
+position: relative;}
+    #overlay {background-color: black; opacity: .4;
+        position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+     right: 0px;
+     border-radius: 50px}
+    #one {background-color: red; color: white; position: absolute;
+        top: 40px;
+    right: 40px;}
+    #two {background-color:rgb(214, 243, 233); opacity: 1; position: absolute}
+    #three {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute}
+    #four {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute}
 </style>
 
 </head>
 
 <body>
-    <div id="card"></div>
+    <div id="card">
+        <div id="overlay">
+            <div id="one">save</div>
+            <div id="two">beauty-belleza-beaute-schoenheit.tumblr.com</div>
+            <div id="three"><i style="font-size:24px" class="fa">&#xf093;</i></i></div>
+            <div id="four">...</div>
+        </div>
+    </div>
 </body>
 
 </html>
