positioned the overlay

--- a/index.html
+++ b/index.html
@@ -27,21 +27,27 @@ position: relative;}
     #one {background-color: red; color: white; position: absolute;
         top: 50px;
     right: 50px;}
-    #two {background-color:rgb(214, 243, 233); opacity: 1; position: absolute}
-    #three {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute}
-    #four {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute}
+    #two {background-color:rgb(214, 243, 233); opacity: 1; position: absolute;
+    bottom: 40px;
+left: 40px;}
+    #three {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute;
+    bottom: 40px;
+left: 80%}
+    #four {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute;
+    bottom: 40px;
+    right:10%}
 </style>
 
 </head>
 
 <body>
     <div id="card">
-        <div id="overlay">
+        <div id="overlay"></div>
             <div id="one">save</div>
             <div id="two">beauty-belleza-beaute-schoenheit.tumblr.com</div>
             <div id="three"><i style="font-size:24px" class="fa">&#xf093;</i></i></div>
             <div id="four">...</div>
-        </div>
+        
     </div>
 </body>
 
