--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-    body {text-align: center; font-family:}
+    body {text-align: center; font-family: Arial, Helvetica, sans-serif}
 #card {margin: 100px auto;
         position: relative;
         background-image: url(river.jpg);
@@ -24,18 +24,28 @@ position: relative;}
     left: 0px;
      right: 0px;
      border-radius: 50px}
-    #one {background-color: red; color: white; position: absolute;
+    #one {background-color: RGB(230,0,34); color: white; position: absolute;
+        font-size: 30pt;
+        font-weight: bold;
         top: 50px;
-    right: 50px;}
+    right: 50px;
+    border-radius: 80px/90px;
+height: 100px;
+width: 160px;}
+#save {margin-top: 18%;}
+
     #two {background-color:rgb(214, 243, 233); opacity: 1; position: absolute;
     bottom: 40px;
-left: 40px;}
+left: 40px;
+border-radius: 10%;}
     #three {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute;
     bottom: 40px;
-left: 80%}
+left: 80%;
+border-radius: 50%;}
     #four {background-color:rgb(214, 243, 233);  opacity: .9; position: absolute;
     bottom: 40px;
-    right:10%}
+    right:10%;
+    border-radius: 50%;}
 </style>
 
 </head>
@@ -43,7 +53,9 @@ left: 80%}
 <body>
     <div id="card">
         <div id="overlay"></div>
-            <div id="one">save</div>
+            <div id="one">
+                <div id="save">Save</div>                
+                </div>
             <div id="two">beauty-belleza-beaute-schoenheit.tumblr.com</div>
             <div id="three"><i style="font-size:24px" class="fa">&#xf093;</i></i></div>
             <div id="four">...</div>
