--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     width: 575px;
     margin-top: 200px;
     border-radius: 50px;
-position: relative;}
+position: relative;
+overflow:hidden;}
     #overlay {background-color: black; opacity: 0;
         position: absolute;
     top: 0px;
