--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ transform: translateY(+130px);
         transition: transform;
         opacity: .9;
     }
+    #icon {margin-top: 20%;}
     #card:hover #overlay {opacity: .4;}
     #card:hover #one {transform: translateY(0px);
       transition: transform .4s;
@@ -110,8 +111,8 @@ transform: translateY(+130px);
                 </div>
             <div id="two">
                 <div id="bot"> beauty-belleza-beaute-schoenheit.tumblr.com</div></div>
-            <div id="three"><div class="save"><i style="font-size:24px" class="fa">&#xf093;</i></i></div> </div>
-            <div id="four"><div class="save">...</div></div>
+            <div id="three"><div id="icon" ><i style="font-size:32px" class="fa">&#xf093;</i></i></div> </div>
+            <div id="four"><div id="dots">...</div></div>
         
 </div>
 </body>
