--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ transform: translateY(+130px);
     transform: translateY(+130px);
       transition: transform .3s;
       transition-timing-function: ease-in;}
-    #bot {margin-top: 5%;
+    #bot {margin-top: 2%;
         margin-right: 20px;
         border-right: 20px;
     padding-left: 20px;
@@ -112,7 +112,7 @@ transform: translateY(+130px);
                 <div class="save">Save</div>                
                 </div>
             <div id="two">
-                <div id="bot"> beauty-belleza-beaute-schoenheit.tumblr.com</div></div>
+                <div id="bot"> &#129141; beauty-belleza-beaute-schoenheit.tumblr.com</div></div>
             <div id="three"><div id="icon" ><i style="font-size:32px" class="fa">&#xf093;</i></i></div> </div>
             <div id="four"><div id="dots">...</div></div>
         
