--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ transform: translateY(+130px);
         border-right: 20px;
     padding-left: 20px;
     padding-right: 20px;}
-    #card:hover #save{transform: translateY(-100px);}
+    #card:hover #save{transform: translateY(-100px);
+    }
     
     #card:hover #hover {transform:translateY(-60px);
         transition: transform;
