--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@ transform: translateY(-200px);
       transition-timing-function: ease-in;}
 .save {margin-top: 20%;}
 
+div#bot {
+width:300px;
+text-overflow:ellipsis;
+overflow:hidden;
+}
     #two {background-color:rgb(214, 243, 233); opacity: 1; position: absolute;
         height: 70px;
     width: 320px;
@@ -78,7 +83,7 @@ transform: translateY(+130px);
     padding-left: 20px;
     padding-right: 20px;}
     #card:hover #save{transform: translateY(-100px);
-    }
+        }
     
     #card:hover #hover {transform:translateY(-60px);
         transition: transform;
